--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         // Now you can use the data in the array for different purpose.
         // I am simply showing the data on my web page using the <p> element.
         for (i = 0; i <= arrItems.length - 1; i++) {
-            var p = document.getElementById('ProjectName');
+            var p = document.getElementById('one-third column value');
             p.innerHTML = p.innerHTML + ' <br > ' + arrItems[i].Name;
         }
     }
