--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="one-half column">
           <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
+          <a class="button button-primary" href="http://getskeleton.com">This  is a test</a>
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/iphone.png">
