--- a/index.html
+++ b/index.html
@@ -26,28 +26,43 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script>
-    var oXHR = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP');
+   //first add an event listener for page load
+   document.addEventListener( "DOMContentLoaded", get_json_data, false ); // get_json_data is the function name that will fire on page load
+//modified from StackOverflow https://stackoverflow.com/questions/51275730/populate-html-table-with-json-data
+//this function is in the event listener and will execute on page load
+function get_json_data(){
+    // Relative URL of external json file
+    var json_url = '/assets/WorkExperience.json';
 
-    function reportStatus() {
-        if (oXHR.readyState == 4)                   // Request completed.
-            showTheList(this.responseText);         // All set. Now show the data.
-    }
+    //Build the XMLHttpRequest (aka AJAX Request)
+    xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() { 
+        if (this.readyState == 4 && this.status == 200) {//when a good response is given do this
 
-    oXHR.onreadystatechange = reportStatus;
-    oXHR.open("GET", "/assets/WorkExperience.json", true);          // true = ASYNCHRONOUS REQUEST (DESIRABLE), false = SYNCHRONOUS REQUEST.
-    oXHR.send();
-
-    function showTheList(json) {
-        var arrItems = [];
-        arrItems = JSON.parse(json); 	// Fill JSON data to an array.
-
-        // Now you can use the data in the array for different purpose.
-        // I am simply showing the data on my web page using the <p> element.
-        for (i = 0; i <= arrItems.length - 1; i++) {
-            var p = document.getElementById('one-third column value');
-            p.innerHTML = p.innerHTML + ' <br > ' + arrItems[i].Name;
+            var data = JSON.parse(this.responseText); // convert the response to a json object
+            append_json(data);// pass the json object to the append_json function
         }
     }
+    //set the request destination and type
+    xmlhttp.open("POST", json_url, true);
+    //set required headers for the request
+    xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    // send the request
+    xmlhttp.send(); // when the request completes it will execute the code in onreadystatechange section
+}
+
+//this function appends the json data to the table 'gable'
+function append_json(data){
+    var table = document.getElementById('ProjectInfo');
+    data.forEach(function(object) {
+        var tr = document.createElement('tr');
+        tr.innerHTML = '<td>' + object.ProjectName + '</td>' +
+        '<td>' + object.Description + '</td>' +
+        '<td>' + object.Role + '</td>' +
+        '<td>' + object.Client + '</td>';
+        table.appendChild(tr);
+    });
+}
 </script>
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -75,6 +90,20 @@
   </div>
 
   <div class="section values">
+      <table id="ProjectInfo">
+          <colgroup>
+              <col class="ProjectName" />
+              <col class="Description" />
+              <col class="Role" />
+              <col class="Client" />
+          </colgroup>
+          <tr>
+              <th onclick="sortTable(0)">&nbsp&nbspProject Name</th>
+              <th onclick="sortTable(1)">&nbsp&nbspDescription</th>
+              <th onclick="sortTable(2)">&nbsp&nbspRole</th>
+              <th onclick="sortTable(3)">&nbsp&nbspClient</th>
+          </tr>
+      </table>
     <div class="container">
       <div class="row">
         <div class="one-third column value">
@@ -125,4 +154,4 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
-</html>
+</html>"# vpellerito.github.io" 
