--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 //this function is in the event listener and will execute on page load
 function get_json_data(){
     // Relative URL of external json file
-    var json_url = './assets/WorkExperience.json';
+    var json_url = 'https://github.com/vpellerito/vpellerito.github.io/edit/master/assets/WorkExperience.json';
 
     //Build the XMLHttpRequest (aka AJAX Request)
     xmlhttp = new XMLHttpRequest();
